# levelup-dev-lab

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml
episodes/001-automation-hello-world/: Makefile  README.md  conftest.py  walkthrough.md
episodes/001-automation-hello-world/automation_hello_world/: __init__.py  __main__.py  cli.py  report.py  scanner.py
episodes/001-automation-hello-world/src/: hello.py
episodes/001-automation-hello-world/tests/: test_automation.py  test_hello.py
episodes/002-clean-code-naming/: Makefile  README.md
episodes/002-clean-code-naming/tests/: OverdueTest.java  overdue.test.js  test_overdue.py
episodes/003-dev-tooling-editor-setup/: Makefile  README.md
episodes/003-dev-tooling-editor-setup/src/: .editorconfig  check_setup.sh  vscode-settings.json
episodes/004-observability-basics/: Makefile  README.md
episodes/005-build-your-own-cli-python/: Makefile  README.md
episodes/006-build-your-own-cli-node/: Makefile  README.md  package.json
shared/scripts/: new_episode.sh
shared/templates/: episode-readme.md
site/: episodes.json  index.html  script.js  styles.css
tools/publish/: Makefile  README.md  conftest.py  pyproject.toml
tools/publish/publish/: __init__.py  __main__.py  check.py  cli.py  config.py  release.py  scaffold.py  shorts.py
tools/publish/tests/: conftest.py  test_check.py  test_cli.py  test_config.py  test_release.py  test_scaffold.py  test_shorts.py
(+10 files in other folders)
