[project]
name = "levelup-publish"
version = "1.0.0"
description = "Internal per-episode publishing CLI for LevelUp Dev Lab."
requires-python = ">=3.11"
dependencies = ["typer>=0.12"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
publish = "publish.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["publish"]
